--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frontend com Docker</title>
+    <title>Frontend</title>
 </head>
 <body>
     <h1>Frontend funcionando com Docker!</h1>
