--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,5 +7,18 @@
 </head>
 <body>
     <h1>Frontend funcionando com Docker!</h1>
+    <button onclick="buscarUsuarios()">Buscar Usuários</button>
+    <div id="resultado"></div>
+
+    <script>
+        function buscarUsuarios() {
+            fetch('/api/users')  // 🔹 Chama a API do backend
+                .then(response => response.json())
+                .then(data => {
+                    document.getElementById('resultado').innerHTML = JSON.stringify(data, null, 2);
+                })
+                .catch(error => console.error('Erro ao buscar usuários:', error));
+        }
+    </script>
 </body>
 </html>
